Principled Subsurface Scattering, wrong shadow color #51589

Closed
opened 2017-05-22 17:03:41 +02:00 by msalv · 10 comments

System Information
intel i5 6400, windows 10 64

Blender Version
blender 2.78.5 f3d9f0c

Short description of error

The color of the diffuse bounced light of Principled BSDF shaders with Subsurface Scattering is wrong. The color is always that of the Base color input, instead of the proper mixture of both Base color and Subsurface scattering color.

Both balls on left are materials using Principled BSDF, while the two on the right have better behaviour with a mixing of diffuse and subsurface scattering in the node editor. In all materials the diffuse is cyan (0,1,1) while the SSS is pure red (1,0,0)
1.png In the bottom row diffuse and SSS are mixed 50%, which gives grey. The problem is that Principled BSDF gives shadows with only the color of the Base Color channel, in this case cyan, even though it should or grey

There's another problem that might be related. You can see that the bottom right grey ball, which uses a mix shader of diffuse and SSS at 50% has a red backscatter light, while the bottom left ball, the one with Principled BSDF and SSS also at 50%, has just a grey backscatter. It seems that, in Principled BSDF, the color of the SSS backscatter is the mixed color of both Base Color and SSS color inputs, instead of just the color of the SSS color input itself, which seems to defeat the purpose of SSS in the first place (although using SSS at 100% and controlling the radius of each color works fine, but it's just a single scatter) Tell me if I should report it in another bug report, or if it's not a bug, where can I discuss this behaviour with the apropiate developer.

Exact steps for others to reproduce the error
principledsubsurface.blend

**System Information** intel i5 6400, windows 10 64 **Blender Version** blender 2.78.5 f3d9f0c **Short description of error** The color of the diffuse bounced light of Principled BSDF shaders with Subsurface Scattering is wrong. The color is always that of the Base color input, instead of the proper mixture of both Base color and Subsurface scattering color. Both balls on left are materials using Principled BSDF, while the two on the right have better behaviour with a mixing of diffuse and subsurface scattering in the node editor. In all materials the diffuse is cyan (0,1,1) while the SSS is pure red (1,0,0) ![1.png](https://archive.blender.org/developer/F606174/1.png) In the bottom row diffuse and SSS are mixed 50%, which gives grey. The problem is that Principled BSDF gives shadows with only the color of the Base Color channel, in this case cyan, even though it should or grey There's another problem that might be related. You can see that the bottom right grey ball, which uses a mix shader of diffuse and SSS at 50% has a red backscatter light, while the bottom left ball, the one with Principled BSDF and SSS also at 50%, has just a grey backscatter. It seems that, in Principled BSDF, the color of the SSS backscatter is the mixed color of both Base Color and SSS color inputs, instead of just the color of the SSS color input itself, which seems to defeat the purpose of SSS in the first place (although using SSS at 100% and controlling the radius of each color works fine, but it's just a single scatter) Tell me if I should report it in another bug report, or if it's not a bug, where can I discuss this behaviour with the apropiate developer. **Exact steps for others to reproduce the error** [principledsubsurface.blend](https://archive.blender.org/developer/F606180/principledsubsurface.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscribers: @PascalSchon, @Sergey

Added subscribers: @PascalSchon, @Sergey
Pascal Schön was assigned by Sergey Sharybin 2017-05-22 17:37:30 +02:00

@PascalSchon, mind having a look? Thanks!

@PascalSchon, mind having a look? Thanks!

This issue was referenced by blender/cycles@7a12e07ce9

This issue was referenced by blender/cycles@7a12e07ce9d3223db8fd7d5b12396f761bafba8a

This issue was referenced by e20a33b89d

This issue was referenced by e20a33b89d75897dd7aa5e296abd756ec4b25db3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

I added a fix for this problem. It was just a small problem for diffuse ancestors. Here I was setting the subsurface value to 0.0 which led to a principled diffuse shader closure call. Here the base color was used to evaluate the closure. I just needed to apply the mixed color to base color in this case.

I added a fix for this problem. It was just a small problem for diffuse ancestors. Here I was setting the subsurface value to 0.0 which led to a principled diffuse shader closure call. Here the base color was used to evaluate the closure. I just needed to apply the mixed color to base color in this case.
Member

For your other issue, I added a new Diff (D2685) which corrects it.

For your other issue, I added a new Diff ([D2685](https://archive.blender.org/developer/D2685)) which corrects it.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51589
No description provided.